--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,7 @@ ul {
 
 .hero {
   margin-top: 30px;
+  display: flex;
 }
 
 .hero .info {
@@ -192,16 +193,18 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 96px;
+  margin-top: 70px;
 }
 
-.clients .images > img {
-  padding: 12px 16px;
-  border-radius: 10px;
-  cursor: pointer;
+.clients .images a {
+  display: flex;
+  align-items: center;
+  height: 70px;
+  padding: 0 42px;
+  border-radius: 12px;
 }
 
-.clients .images > img:hover {
+.clients .images a:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
