--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ ul {
   display: flex;
   flex-direction: column;
   background-color: #e6f0ff;
-  height: 100vh;
+  height: calc(100vh - 90px);
 }
 
 .navbar {
